--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "typescript": "^4.5.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
