--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "ant-design": "^1.0.0",
     "antd": "^4.18.7",
     "axios": "^0.25.0",
     "react": "^17.0.2",
@@ -47,6 +49,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "ant-design-pro": "^2.3.2",
+    "gh-pages": "^3.2.3",
+    "react-app-rewire-less": "^2.1.3"
   }
 }
