--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ant-design": "^1.0.0",
     "antd": "^4.18.7",
     "axios": "^0.25.0",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -18,6 +19,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "redux": "^4.1.2",
+    "redux-form": "^8.3.8",
     "redux-thunk": "^2.4.1",
     "typescript": "^4.5.4",
     "web-vitals": "^1.0.1"
