--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
-      "redux": "^4.1.2",
+    "redux": "^4.1.2",
     "redux-form": "^8.3.8",
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5",
@@ -53,6 +53,7 @@
   },
   "devDependencies": {
     "ant-design-pro": "^2.3.2",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^3.2.3",
     "react-app-rewire-less": "^2.1.3"
   }
