--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.25.0",
     "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
