created first unit test for users - check follow

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yefimchuk.github.io/social-network-React",
+  "homepage": "https://yefimchuk.github.io/socialNetworkReact",
   "name": "first-react-app",
   "version": "0.1.0",
   "private": true,
