--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "redux-form": "^8.3.8",
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5",
@@ -54,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "ant-design-pro": "^2.3.2",
     "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^3.2.3",
