--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.18.7",
     "axios": "^0.25.0",
     "formik": "^2.2.9",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-content-loader": "^6.2.0",
     "react-dom": "^17.0.2",
