--- a/package.json
+++ b/package.json
@@ -29,6 +29,16 @@
     "typescript": "^4.6.3",
     "web-vitals": "^1.0.1"
   },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -43,6 +53,7 @@
       "react-app/jest"
     ]
   },
+
   "browserslist": {
     "production": [
       ">0.2%",
@@ -60,6 +71,8 @@
     "ant-design-pro": "^2.3.2",
     "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^3.2.3",
-    "react-app-rewire-less": "^2.1.3"
+    "prettier": "2.6.2",
+    "react-app-rewire-less": "^2.1.3",
+    "tslint": "^6.1.3"
   }
 }
