--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "ant-design": "^1.0.0",
     "antd": "^4.18.7",
     "axios": "^0.25.0",
+    "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.3.1",
     "react-content-loader": "^6.2.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
