--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "reselect": "^4.1.5",
     "sass": "^1.49.10",
     "typescript": "^4.6.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "webpack": "^5.73.0",
+    "yarn": "^1.22.19"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
@@ -73,7 +75,7 @@
     "ant-design-pro": "^2.3.2",
     "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^3.2.3",
-    "prettier": "2.6.2",
+    "prettier": "^2.6.2",
     "react-app-rewire-less": "^2.1.3",
     "tslint": "^6.1.3"
   }
